--- a/src/components/Shop/Shop.css
+++ b/src/components/Shop/Shop.css
@@ -1,5 +1,7 @@
 .small-container{
     display: grid;
     grid-template-columns: 4fr 1fr ;
-    margin: 50px;
+    margin-bottom: 0px  ;
+    margin-left: 50px;
+   
 }
